<resources>
    <string name="app_name">MovieLook</string>
    <string name="now_playing">Now Playing</string>
    <string name="rating">Rating</string>
    <string name="director">Director</string>
    <string name="release_date">Release Date</string>
    <string name="overview">Overview</string>
    <string name="genre">Genre</string>
    <string name="casts">Casts</string>
    <string name="trailer">Trailer</string>
    <string name="popular">Popular</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_favorite">Add To Favorite</string>
    <string name="remove_from_favorite">Remove From Favorite</string>
    <string name="your_favorite_movie">Your Favorite Movie</string>
    <string name="removed_from_favorite">Removed from favorite</string>
    <string name="added_to_favorite">Added to favorite</string>
</resources>
