<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_editor_absoluteX="0dp"
        app:layout_editor_absoluteY="16dp"
        >

        <!-- Scrollable view here -->

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            >

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:titleEnabled="false"
                app:expandedTitleGravity="bottom"
                app:layout_scrollFlags="scroll|snap">


                <ImageView
                    android:id="@+id/image_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.5"/>

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                    tools:text="Avenger"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="150dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_collapseMode="pin"
                    app:layout_collapseParallaxMultiplier="1"
                    />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_detail"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="parallax"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_image_poster_detail"
                    style="@style/CardView.Light"
                    android:layout_width="150dp"
                    android:layout_height="230dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/image_poster_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@color/colorAccent" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/text_rating_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/rating"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    app:layout_constraintBottom_toTopOf="@+id/text_rating_value"
                    app:layout_constraintStart_toEndOf="@id/card_image_poster_detail"
                    app:layout_constraintTop_toTopOf="@id/card_image_poster_detail" />

                <TextView
                    android:id="@+id/text_rating_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintBottom_toTopOf="@+id/text_director_title"
                    app:layout_constraintStart_toStartOf="@id/text_rating_title"
                    app:layout_constraintTop_toBottomOf="@id/text_rating_title"
                    tools:text="7.5/10" />

                <TextView
                    android:id="@+id/text_director_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/director"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    app:layout_constraintBottom_toTopOf="@+id/text_director_value"
                    app:layout_constraintStart_toEndOf="@id/card_image_poster_detail"
                    app:layout_constraintTop_toBottomOf="@id/text_rating_value" />

                <TextView
                    android:id="@+id/text_director_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintBottom_toTopOf="@+id/text_release_date_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/text_director_title"
                    app:layout_constraintTop_toBottomOf="@id/text_director_title"
                    tools:text="John Doe" />

                <TextView
                    android:id="@+id/text_release_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/release_date"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    app:layout_constraintBottom_toTopOf="@+id/text_release_date_value"
                    app:layout_constraintStart_toEndOf="@id/card_image_poster_detail"
                    app:layout_constraintTop_toBottomOf="@id/text_director_value" />

                <TextView
                    android:id="@+id/text_release_date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintBottom_toTopOf="@+id/text_genre_title"
                    app:layout_constraintStart_toStartOf="@id/text_release_date_title"
                    app:layout_constraintTop_toBottomOf="@id/text_release_date_title"
                    tools:text="February 5, 2020" />

                <TextView
                    android:id="@+id/text_genre_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/genre"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    app:layout_constraintBottom_toTopOf="@+id/text_genre_value"
                    app:layout_constraintStart_toEndOf="@id/card_image_poster_detail"
                    app:layout_constraintTop_toBottomOf="@id/text_release_date_value" />

                <TextView
                    android:id="@+id/text_genre_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintBottom_toTopOf="@+id/button_favorite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/text_release_date_title"
                    app:layout_constraintTop_toBottomOf="@id/text_genre_title"
                    tools:text="Action" />

                <TextView
                    android:id="@+id/text_casts_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/casts"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_favorite" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_casts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_casts_title"
                    tools:listitem="@layout/item_cast"
                    tools:itemCount="3"
                    />

                <TextView
                    android:id="@+id/text_overview_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recycler_casts"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/overview"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    />

                <TextView
                    android:id="@+id/text_overview_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_overview_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:id="@+id/text_trailer_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_overview_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/trailer"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    />

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_trailer_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"
                    app:autoPlay="false"
                    app:showFullScreenButton="false" />

                <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/progress_bar_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:indicatorName="BallGridPulseIndicator"
                    app:indicatorColor="@color/colorAccent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <Button
                    android:id="@+id/button_favorite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/add_to_favorite"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="@+id/card_image_poster_detail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/card_image_poster_detail"
                    app:layout_constraintTop_toBottomOf="@+id/text_genre_value" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>